@@ -1,3 +1,7 @@
+2008-07-29  Brian Bidulock  <bidulock@openss7.org>
+
+	* src/modules/sth.c: typo in conditional
+
 2008-07-28  Brian Bidulock  <bidulock@openss7.org>
 
 	* src/modules/sth.c: traded one lock for another, fix bug 019
